--- a/Hackathon.html
+++ b/Hackathon.html
@@ -20,29 +20,29 @@
 </head>
 
 <body>
-    <header>
+  <header>
         <div class="navbar-fixed">
             <nav class="white">
                 <div class="nav-wrapper container">
-                    <a href="#" data-target="slide-out" class="sidenav-trigger hide-on-large">
+                    <a href="#" data-target="slide-out" class="sidenav-trigger hide-on-large grey-text text-darken-2">
                         <i class="material-icons">menu</i>
                     </a>
                     <a href="#!" class="brand-logo black-text">Logo</a>
                     <ul class="right hide-on-med-and-down">
                         <li>
-                            <a class="waves-effect black-text" href="index.html">Home</a>
+                            <a class="waves-effect waves-orange grey-text text-darken-2 " href="index.html">Home</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text" href="hackathon.html">Hackathon</a>
+                            <a class="waves-effect waves-orange grey-text text-darken-2 " href="hackathon.html">Hackathon</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text" href="conference.html">Conference</a>
+                            <a class="waves-effect waves-orange grey-text text-darken-2 " href="conference.html">Conference</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text" href="about.html">About</a>
+                            <a class="waves-effect waves-orange grey-text text-darken-2 " href="about.html">About</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text" href="contact.html">Contact</a>
+                            <a class="waves-effect waves-orange grey-text text-darken-2 " href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -56,7 +56,7 @@
                 <a class="waves-effect" href="index.html">Home</a>
             </li>
             <li>
-                <a class="waves-effect" href="hackathon.html">Hackathon</a>
+                <a class="waves-effect" href="Hackathon.html">Hackathon</a>
             </li>
             <li>
                 <a class="waves-effect" href="conference.html">Conference</a>
@@ -79,8 +79,9 @@
 
     </header>
 
+
     <main>
-        <div id="index-banner" class="parallax-container" style="height: 100vh">
+        <div id="index-banner" class="parallax-container" style="height: 93vh">
             <div class="section no-pad-bot">
                 <div class="container">
                     <br><br>
@@ -95,21 +96,119 @@
         </div>
 
         <br><br><br>
-        <div class="row container" style="height: 300px;">
-            <div class="col s5 grey lighten-3" style="height: 300px; width: 450px;">
+        <div class="row container" style="height: 150px;">
+            <div class="col s5 grey lighten-3" style="height: 150px; width: 450px; border-top: 6px solid orange; border-right: 6px solid orange">
+                <br>
                 <h4 style="text-align: center;">
                     Last Date
                 </h4>
-                <br>
-                <h6>
 
+                <h6 style="text-align: center;">
+                    July 10 2K18
                 </h6>
             </div>
-            <div class="col s5 grey lighten-3" style="height: 300px; margin-left: 60px; width: 450px;">
+            <div class="col s5 grey lighten-3" style="height: 150px; margin-left: 60px; width: 450px; border-top: 6px solid orange; border-left: 6px solid orange">
+                <br>
+                <h4 style="text-align: center;">
+                    Venue
+                </h4>
+
+                <h6 style="text-align: center;">
+                    TCS Mihan
+                </h6>
+            </div>
+        </div>
+        <br><br>
+        <div class="row container">
+            <h3>Problem Statements</h3>
+            <br><br>
+
+            <div class="filterDiv topicone">
+                <ul class="collapsible popout">
+                    <li>
+                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
+                    </li>
+                </ul>
+
+            </div>
+
+            <div class="filterDiv topicone">
+                <ul class="collapsible popout">
+                    <li>
+                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
+                    </li>
+                </ul>
+
+            </div>
+
+            <div class="filterDiv topicone">
+                <ul class="collapsible popout">
+                    <li>
+                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
+                    </li>
+                </ul>
+
+            </div>
+            <div class="filterDiv topicone">
+                <ul class="collapsible popout">
+                    <li>
+                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
+                    </li>
+                </ul>
+
+            </div>
+            <div class="filterDiv topicone">
+                <ul class="collapsible popout">
+                    <li>
+                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
+                    </li>
+                </ul>
+
+            </div>
+            <div class="filterDiv topictwo">
+                <ul class="collapsible popout">
+                    <li>
+                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
+                    </li>
+                </ul>
+
+            </div>
+
+            <div class="filterDiv topicthree">
+                <ul class="collapsible popout">
+                    <li>
+                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="filterDiv topicfour">
+                <ul class="collapsible popout">
+                   <li>
+                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
+                    </li>
+                </ul>
+
+            </div>
+
+            <div class="filterDiv topicone">
+                <ul class="collapsible popout">
+                    <li>
+                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
+                    </li>
+                </ul>
 
             </div>
         </div>
-
     </main>
 
     <footer class="page-footer white" style="border-top: 8px solid orange">
@@ -149,6 +248,7 @@
             </div>
         </div>
     </footer>
+
 
 
     <script src="js/jquery.min.js"></script>
