--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
             <div id="hero-slider" class="valign-wrapper">
                 <div class="container center">
-                    <div class="caption center" data-tilt>
+                    <div class="caption center">
                         <h1 class="white-text">IndNX 4.0</h1>
                         <p class="white-text">Date: XX Month 2018</p>
                         <a href="https://reg.form.link" class="btn btn-register-hero btn-large btn-flat white-text">Register now</a>
@@ -139,7 +139,7 @@
         <section class="padded-top-cozy padded-bottom-cozy">
             <div class="container">
 
-                <h3 class="center light orange-text text-darken-4 ">Speakers</h3>
+                <h2 class="center light orange-text text-darken-4 ">Speakers</h2>
 
 
                 <div class="row padded-top-comfortable">
