hi change kiya hai

--- a/conference.html
+++ b/conference.html
@@ -128,7 +128,7 @@
             <div class="container">
 
                 <!--<h6 class="center light grey-text">About</h6>-->
-                <h3 class="center light orange-text text-darken-4 ">Some highlights of event</h3>
+                <h2 class="center light orange-text text-darken-4 ">Some highlights of event</h2>
                 <p class="center  text-darken-2 padded-top-compact flow-text light">Some paragraph with description of event. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. </p>
             </div>
         </section>
@@ -165,7 +165,7 @@
 
         <section class="padded-top-comfortable">
 
-            <h3 class="center light orange-text text-darken-4 padded-bottom-comfortable">SPEAKERS</h3>
+            <h2 class="center light orange-text text-darken-4 padded-bottom-comfortable ">Speakers</h2>
 
             <div class="row no-margin  grey lighten-2">
 
@@ -207,7 +207,7 @@
 
         <section class="padded-comfortable">
 
-            <h3 class="center light grey-text text-darken-2 padded-bottom-comfortable">Partners</h3>
+            <h2 class="center light grey-text text-darken-2 padded-bottom-comfortable">PARTNERS</h2>
             <div class="container">
                 <div class="row">
                     <img src="images/hero-slider/4.jpg" alt="sponsor" class="col s6 m4 l3 sponsor">
