--- a/conference.html
+++ b/conference.html
@@ -206,6 +206,41 @@
         <div class="divider"></div>
 
         <section class="padded-comfortable">
+            <h2 class="center light orange-text">Schedule</h2>
+            <div class="row">
+                <div class="col s12 m8 push-m2">
+                    <div class="card rounded">
+                        <table class="highlight responsive-table centered">
+                            <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Item Name</th>
+                                    <th>Item Price</th>
+                                </tr>
+                            </thead>
+
+                            <tbody>
+                                <tr>
+                                    <td>Alvin</td>
+                                    <td>Eclair</td>
+                                    <td>$0.87sdfgnhiudgendw5i4hw4gin5his4gu4n5dh4giw5hndiwy</td>
+                                </tr>
+                                <tr>
+                                    <td>Alan</td>
+                                    <td>Jellybean</td>
+                                    <td>$3.76dfgnhiudgendw5i4hw4gin5his4gu4n5dh4giw5hndiw</td>
+                                </tr>
+                                <tr>
+                                    <td>Jonathan</td>
+                                    <td>Lollipop</td>
+                                    <td>$7.00dfgnhiudgendw5i4hw4gin5his4gu4n5dh4giw5hndiw</td>
+                                </tr>
+                            </tbody>
+                        </table>
+
+                    </div>
+                </div>
+            </div>
 
             <h2 class="center light grey-text text-darken-2 padded-bottom-comfortable">PARTNERS</h2>
             <div class="container">
