--- a/hackathon.html
+++ b/hackathon.html
@@ -97,7 +97,7 @@
 
         <br><br><br>
         <div class="row container" style="height: 150px;">
-            <div class="col s5 grey lighten-3" style="height: 150px; width: 450px; border-top: 6px solid orange; border-right: 6px solid orange">
+            <div class="col s5 grey lighten-3" style="height: 150px; width: 450px; border-bottom: 6px solid orange; border-left: 6px solid orange">
                 <br>
                 <h4 style="text-align: center;">
                     Last Date
@@ -107,7 +107,7 @@
                     July 10 2K18
                 </h6>
             </div>
-            <div class="col s5 grey lighten-3" style="height: 150px; margin-left: 60px; width: 450px; border-top: 6px solid orange; border-left: 6px solid orange">
+            <div class="col s5 grey lighten-3" style="height: 150px; margin-left: 60px; width: 450px; border-bottom: 6px solid orange; border-right: 6px solid orange">
                 <br>
                 <h4 style="text-align: center;">
                     Venue
@@ -123,15 +123,9 @@
             <h3>Problem Statements</h3>
             <br><br>
 
-            <div class="filterDiv topicone">
-                <ul class="collapsible popout">
-                    <li>
-                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
-                    </li>
-                </ul>
 
-            </div>
+
+
 
             <div class="filterDiv topicone">
                 <ul class="collapsible popout">
@@ -139,12 +133,46 @@
                         <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
                         <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
                     </li>
-                </ul>
 
-            </div>
+                    <li>
+                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
+                    </li>
 
-            <div class="filterDiv topicone">
-                <ul class="collapsible popout">
+                    <li>
+                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
+                    </li>
+
+                    <li>
+                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
+                    </li>
+
+                    <li>
+                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
+                    </li>
+                    <li>
+                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
+                    </li>
+
+                    <li>
+                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
+                    </li>
+
+                    <li>
+                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
+                    </li>
+
+                    <li>
+                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
+                    </li>
+
                     <li>
                         <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
                         <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
@@ -152,73 +180,21 @@
                 </ul>
 
             </div>
-            <div class="filterDiv topicone">
-                <ul class="collapsible popout">
-                    <li>
-                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
-                    </li>
-                </ul>
 
-            </div>
-            <div class="filterDiv topicone">
-                <ul class="collapsible popout">
-                    <li>
-                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
-                    </li>
-                </ul>
-
-            </div>
-            <div class="filterDiv topictwo">
-                <ul class="collapsible popout">
-                    <li>
-                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
-                    </li>
-                </ul>
-
-            </div>
-
-            <div class="filterDiv topicthree">
-                <ul class="collapsible popout">
-                    <li>
-                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="filterDiv topicfour">
-                <ul class="collapsible popout">
-                   <li>
-                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
-                    </li>
-                </ul>
-
-            </div>
-
-            <div class="filterDiv topicone">
-                <ul class="collapsible popout">
-                    <li>
-                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
-                    </li>
-                </ul>
-
-            </div>
         </div>
     </main>
+
+
+
 
     <footer class="page-footer white" style="border-top: 8px solid orange">
         <div class="container">
             <div class="row">
-                <div class="col l6 s12">
+                <div class="col l6 s6">
                     <h5 class="black-text">INDnX 4.0</h5>
-                    <p class="black-text">You can use rows and columns here to organize your footer content.</p>
+                    <p class="black-text">To bring together the potential IOT specialist IOT consumers and IOT service Providers with representative from diffrent sectors and Institutes</p>
                 </div>
-                <div class="col l4 offset-l2 s12">
+                <div class="col l1 offset-l2 s3">
                     <h5 class="black-text">Sitemap</h5>
                     <ul>
                         <li>
@@ -235,6 +211,29 @@
                         </li>
                         <li>
                             <a class="waves-effect black-text" href="contact.html">Contact</a>
+                        </li>
+
+                    </ul>
+                </div>
+
+                <div class="col l1 offset-l2 s3" style="width: 70px;">
+                    <h5 class="black-text"></h5>
+                    <br>
+                    <ul>
+                        <li>
+                            <a class="waves-effect black-text" href="#">FAQ's</a>
+                        </li>
+                        <li>
+                            <a class="waves-effect black-text" href="#">Terms</a>
+                        </li>
+                        <li>
+                            <a class="waves-effect black-text" href="#">Mentors</a>
+                        </li>
+                        <li>
+                            <a class="waves-effect black-text" href="#">Support</a>
+                        </li>
+                        <li>
+                            <a class="waves-effect black-text" href="#">Privacy Policy</a>
                         </li>
 
                     </ul>
