--- a/conference.html
+++ b/conference.html
@@ -233,27 +233,27 @@
                         <table class="highlight responsive-table centered">
                             <thead>
                                 <tr>
-                                    <th>Name</th>
-                                    <th>Item Name</th>
-                                    <th>Item Price</th>
+                                    <th>Date</th>
+                                    <th>Time</th>
+                                    <th>Description</th>
                                 </tr>
                             </thead>
 
                             <tbody>
                                 <tr>
-                                    <td>Alvin</td>
-                                    <td>Eclair</td>
-                                    <td>$0.87sdfgnhiudgendw5i4hw4gin5his4gu4n5dh4giw5hndiwy</td>
+                                    <td>dd/mm/yy</td>
+                                    <td>00:00</td>
+                                    <td>aaaaaaaa</td>
                                 </tr>
                                 <tr>
-                                    <td>Alan</td>
-                                    <td>Jellybean</td>
-                                    <td>$3.76dfgnhiudgendw5i4hw4gin5his4gu4n5dh4giw5hndiw</td>
+                                    <td>dd/mm/yy</td>
+                                    <td>00:00</td>
+                                    <td>bbbbbbbb</td>
                                 </tr>
                                 <tr>
-                                    <td>Jonathan</td>
-                                    <td>Lollipop</td>
-                                    <td>$7.00dfgnhiudgendw5i4hw4gin5his4gu4n5dh4giw5hndiw</td>
+                                    <td>dd/mm/yy</td>
+                                    <td>00:00</td>
+                                    <td>cccccccc</td>
                                 </tr>
                             </tbody>
                         </table>
