--- a/hackathon.html
+++ b/hackathon.html
@@ -131,51 +131,51 @@
                 <ul class="collapsible popout">
                     <li>
                         <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
                     </li>
 
                     <li>
                         <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
                     </li>
 
                     <li>
                         <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
                     </li>
 
                     <li>
                         <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
                     </li>
 
                     <li>
                         <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
                     </li>
                     <li>
                         <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
-                    </li>
-
-                    <li>
-                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
                     </li>
 
                     <li>
                         <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
                     </li>
 
                     <li>
                         <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
                     </li>
 
                     <li>
                         <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
-                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">cloud</i>Enroll Now</a></span></div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
+                    </li>
+
+                    <li>
+                        <div class="collapsible-header"><i class="material-icons">adjust</i>Problem Statement</div>
+                        <div class="collapsible-body center"><span><h4>Problem Statement</h4><h6>Details about the Problem Statement</h6><h5>Eligibility Criteria</h5> one <br> two <br>three <br><br> <a class="waves-effect waves-light btn orange" style="width: 85%;margin-left: 40px;"><i class="material-icons left">hdr_strong</i>Enroll Now</a></span></div>
                     </li>
                 </ul>
 
